--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -251,6 +251,11 @@ h1, h2, h3, h4, h5, h6,
     width: 100%;
     padding: 0.75rem 0;
     margin: -1rem -1rem 1rem;
+    text-align: center;
+}
+.box.has-text-centered .subtitle {
+    display: block;
+    text-align: center;
 }
 @media (max-width: 768px) {
     .membership-card .card-content {
