--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -249,8 +249,8 @@ h1, h2, h3, h4, h5, h6,
 .box.has-text-centered h3.title {
     display: block;
     width: 100%;
-    padding: 0.75rem 0;
-    margin: -1rem -1rem 1rem;
+    padding: 1rem 0 0.75rem; /* top padding to separate from box edge */
+    margin: 0 0 0.5rem;   /* only bottom margin for spacing */
     text-align: center;
 }
 .box.has-text-centered .subtitle {
