--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -411,6 +411,18 @@ p {
     padding-top: 2rem;
 }
 
+/* map container at top of contact page */
+.map-container {
+    width: 100%;
+    height: 400px;
+}
+
+/* spacing between opaque navbar and map */
+.navbar:not(.is-transparent-hero) + .content-wrapper .map-container,
+.navbar:not(.is-transparent-hero) ~ .content-wrapper .map-container {
+    margin-top: 25px;
+}
+
 /* nav items should be bold once the bar is compact (i.e. on subpages or scrolled) */
 .navbar.is-scrolled .navbar-item,
 .navbar.is-scrolled .navbar-link {
