--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -42,6 +42,9 @@
     display: block; /* full-width up to max-width */
     position: relative; /* for absolute close button */
 }
+.banner + .banner {
+    margin-top: 0; /* remove extra top margin between stacked banners */
+}
 .banner .delete {
     position: absolute;   
 }
